--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "browser-sync": "^2.11.1",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-sass": "^2.2.0"
+    "gulp-concat": "^2.6.0",
+    "gulp-sass": "^2.2.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.2",
+    "imagemin-pngquant": "^4.2.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
